--- a/code/grpc/server/appsettings.json
+++ b/code/grpc/server/appsettings.json
@@ -11,8 +11,8 @@
       "Https": {
         "Url": "https://*:5001",
         "Certificate": {
-          "KeyPath": "/home/brian/.acme.sh/api.bjdcsa.cloud/api.bjdcsa.cloud.key",
-          "Path": "/home/brian/.acme.sh/api.bjdcsa.cloud/fullchain.cer"
+          "KeyPath": "/app/certificate.key",
+          "Path": "/app/certificate.pub"
         }
       }
     },
