--- a/code/grpc/server/appsettings.json
+++ b/code/grpc/server/appsettings.json
@@ -11,8 +11,8 @@
       "Https": {
         "Url": "https://*:5001",
         "Certificate": {
-          "KeyPath": "/app/certificate.key",
-          "Path": "/app/certificate.pub"
+          "KeyPath": "/app/certs/tls.key",
+          "Path": "/app/certs/tls.crt"
         }
       }
     },
