--- a/deploy/grpc/hello-example.yaml
+++ b/deploy/grpc/hello-example.yaml
@@ -79,41 +79,38 @@ spec:
         secret:
           secretName: hello-service-cert
 ---
-#
-#apiVersion: networking.istio.io/v1alpha3
-#kind: Gateway
-#metadata:
-#  name: whatos-gateway
-#spec:
-#  selector:
-#    istio: ingressgateway
-#  servers:
-#  - port:
-#       number: 443
-#       name: https
-#       protocol: HTTPS
-#    tls:
-#      mode: SIMPLE
-#      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
-#      privateKey: /etc/istio/ingressgateway-certs/tls.key
-#    hosts:
-#     - "whatos.denicolafamily.com"
-#---
-#apiVersion: networking.istio.io/v1alpha3
-#kind: VirtualService
-#metadata:
-#  name: whatos-virtualservice
-#spec:
-#  hosts:
-#  - whatos.denicolafamily.com
-#  gateways:
-#  - whatos-gateway
-#  http:
-#  - match:
-#    - uri:
-#        exact: /api/os
-#    route:
-#    - destination:
-#        host: whatos
-#        port:
-#          number: 8081
+apiVersion: networking.istio.io/v1beta1
+kind: Gateway
+metadata:
+  name: grpcs-gateway
+  namespace: istio-gateway
+spec:
+  selector:
+    istio: ingressgateway
+  servers:
+  - port:
+      number: 8443
+      name: http2
+      protocol: HTTP2
+    tls:
+      mode: PASSTHROUGH
+      credentialName: istio-ingress-tls
+    hosts:
+    - "*.bjdcsa.cloud"
+---
+apiVersion: networking.istio.io/v1beta1
+kind: VirtualService
+metadata:
+  name: hello-service-vs
+  namespace: hellogrpc
+spec:
+  hosts:
+  - api.bjdcsa.cloud"
+  gateways:
+  - istio-gateway/grpcs-gateway
+  http:
+  - route:
+    - destination:
+        host: hello-service
+        port:
+          number: 5001
