--- a/deploy/grpc/hello-example.yaml
+++ b/deploy/grpc/hello-example.yaml
@@ -93,7 +93,7 @@ spec:
       protocol: TLS
     tls:
       mode: SIMPLE
-      credentialName: istio-ingress-tls
+      credentialName: httpbin-credential
     hosts:
     - "*.bjdcsa.cloud"
 ---
@@ -108,6 +108,9 @@ spec:
   gateways:
   - istio-gateway/grpcs-gateway
   tls:
+  - match:
+    - sniHosts:
+      - api.bjdcsa.cloud
   - route:
     - destination:
         host: hello-service.hellogrpc.svc.cluster.local
