--- a/deploy/grpc/hello-example-v2.yaml
+++ b/deploy/grpc/hello-example-v2.yaml
@@ -1,15 +1,8 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: hellogrpc
-  labels:
-    istio-injection: enabled
----
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-service
+  name: hello-service-v2
   namespace: hellogrpc
 spec:
   ports:
@@ -19,17 +12,19 @@ spec:
   type: ClusterIP 
   selector:
     app: hellogreeter
+    version: v2
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hellogreeter
+  name: hellogreeter-v2
   namespace: hellogrpc
 spec:
   replicas: 3
   selector:
     matchLabels:
       app: hellogreeter
+      version: v2      
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -40,6 +35,7 @@ spec:
     metadata:
       labels:
         app: hellogreeter
+        version: v2
     spec:
       securityContext:
         runAsUser: 1000
@@ -50,12 +46,15 @@ spec:
           type: RuntimeDefault
       containers:
       - name: hellogreeter
-        image: bjd145/hello-service:3352bdfde61d
+        image: bjd145/hello-service:06c93709b308
         imagePullPolicy: Always
         securityContext:
           runAsNonRoot: true
           readOnlyRootFilesystem: false
           allowPrivilegeEscalation: false  
+        env:
+        - name: HELLO_GRPC_VERSION
+          value: "v2"
         ports:
         - containerPort: 5001
         resources:
@@ -79,42 +78,22 @@ spec:
           secretName: hello-service-cert
 ---
 apiVersion: networking.istio.io/v1beta1
-kind: Gateway
-metadata:
-  name: grpcs-gateway
-  namespace: istio-gateway
-spec:
-  selector:
-    istio: ingressgateway
-  servers:
-  - port:
-      number: 443
-      name: https
-      protocol: HTTPS
-    tls:
-      mode: PASSTHROUGH
-      #mode: SIMPLE
-      #credentialName: httpbin-credential
-    hosts:
-    - "*.bjdcsa.cloud"
----
-apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
-  name: hello-service-vs
+  name: hello-service-v2-vs
   namespace: hellogrpc
 spec:
   hosts:
-  - api.bjdcsa.cloud
+  - api-v2.bjdcsa.cloud
   gateways:
   - istio-gateway/grpcs-gateway
   tls:
   - match:
     - port: 443
       sniHosts:
-      - api.bjdcsa.cloud
+      - api-v2.bjdcsa.cloud
     route:
     - destination:
-        host: hello-service.hellogrpc.svc.cluster.local
+        host: hello-service-v2.hellogrpc.svc.cluster.local
         port:
           number: 5001
