--- a/deploy/grpc/gateways.yaml
+++ b/deploy/grpc/gateways.yaml
@@ -9,6 +9,10 @@ spec:
     istio: aks-istio-ingressgateway-internal  
   servers:
   - port:
+      number: 80
+      name: http
+      protocol: HTTP
+  - port:
       number: 443
       name: https
       protocol: HTTPS
