--- a/deploy/grpc/secretsprovider.yaml
+++ b/deploy/grpc/secretsprovider.yaml
@@ -16,8 +16,8 @@ spec:
   parameters:
     usePodIdentity: "false"
     useVMManagedIdentity: "false"
-    keyvaultName: cub-25893-kv
-    clientID: ecec3832-4abd-4dab-8d72-ab77a0b2ff94
+    keyvaultName: bunny-44189-kv
+    clientID: 16ce9ff5-3609-4b1f-9626-577a6740251a
     cloudName: ""                                         
     objects:  |
       array:
