--- a/deploy/grpc/hello-example-cleartext.yaml
+++ b/deploy/grpc/hello-example-cleartext.yaml
@@ -31,7 +31,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: hellogreeter
-        image: bjd145/hello-service:06c93709b30d
+        image: bjd145/hello-service:06c93709b30f
         imagePullPolicy: Always
         securityContext:
           runAsNonRoot: true
@@ -49,11 +49,11 @@ spec:
           requests:
             memory: "64Mi"
             cpu: "0.25"
-      tolerations:
-      - key: "reservedFor"
-        operator: "Equal"
-        value: "apps"
-        effect: "NoSchedule"
+      # tolerations:
+      # - key: "reservedFor"
+      #   operator: "Equal"
+      #   value: "apps"
+      #   effect: "NoSchedule"
 ---
 apiVersion: v1
 kind: Service
@@ -65,7 +65,6 @@ spec:
   - port: 5000
     targetPort: 5000
     name: grpc 
-    protocol: TCP
   type: ClusterIP 
   selector:
     app: hellogreeter
