--- a/deploy/grpc/ingress-secretsprovider.yaml
+++ b/deploy/grpc/ingress-secretsprovider.yaml
@@ -16,8 +16,8 @@ spec:
   parameters:
     usePodIdentity: "false"
     useVMManagedIdentity: "false"
-    keyvaultName: bunny-44189-kv
-    clientID: 16ce9ff5-3609-4b1f-9626-577a6740251a
+    keyvaultName: hawk-47407-kv
+    clientID: 71e83a92-8a66-44f4-bf3a-92d5b58f5506
     cloudName: ""                                         
     objects:  |
       array:
