--- a/deploy/grpc/gateways.yaml
+++ b/deploy/grpc/gateways.yaml
@@ -21,11 +21,11 @@ spec:
       credentialName: grpc-ingress-tls
     hosts:
     - "*.bjdcsa.cloud"
-  # - port:
-  #     number: 443
-  #     name: https
-  #     protocol: HTTPS
-  #   tls:
-  #     mode: PASSTHROUGH
-  #   hosts:
-  #   - "*.bjdcsa.cloud"
+  - port:
+      number: 444
+      name: https
+      protocol: HTTPS
+    tls:
+      mode: PASSTHROUGH
+    hosts:
+    - "*.bjdcsa.cloud"
